syntax = "proto3";
package ignition.service;

import "util.proto";

message ServiceTarget {
  string name = 1;
  uint32 port = 2;
}

message Tcp {
  uint32 port = 1;
}

message Tls {
  uint32 port = 1;
}

message Http {}

message ServiceProtocol {
  oneof protocol {
    Tcp tcp = 1;
    Tls tls = 2;
    Http http = 3;
  }
}

message Internal {}

message External {
  string host = 1;
}

message ServiceMode {
  oneof mode {
    Internal internal = 1;
    External external = 2;
  }
}

message Service {
  string name = 1;
  ServiceTarget target = 2;
  ServiceProtocol protocol = 3;
  ServiceMode mode = 4;
}

message ServiceInfo {
  string name = 1;
  ServiceTarget target = 2;
  ServiceProtocol protocol = 3;
  ServiceMode mode = 4;
  optional string internal_ip = 5;
}

message DeployServiceRequest {
  Service service = 1;
}

message DeployServiceResponse {
  ServiceInfo service = 1;
}

message DeleteServiceRequest {
  string name = 1;
}

message DeleteServiceResponse {}

message GetServiceRequest {
  string name = 1;
}

message GetServiceResponse {
  ServiceInfo service = 1;
}

message ListServicesResponse {
  repeated ServiceInfo services = 1;
}

